--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^7.4.1",
     "mongodb": "^2.2.28",
     "mongoose": "^4.10.5",
+    "mongoose-unique-validator": "^1.0.5",
     "morgan": "~1.7.0",
     "ngmap": "^1.18.4",
     "nodemailer": "^4.0.1",
